altered user profile model

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ conda-build==3.18.11
 conda-package-handling==1.6.0
 conda-verify==3.4.2
 contextlib2==0.6.0.post1
+coverage==3.6
 cryptography==2.8
 cycler==0.10.0
 Cython==0.29.15
@@ -55,6 +56,7 @@ distributed==2.11.0
 Django==3.2.8
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+django-environ==0.9.0
 docutils==0.16
 entrypoints==0.3
 et-xmlfile==1.0.1
